hard-gists/2020955/run.log
=== Docker Run Log for 2020955 ===
Started at: Mi 29. Okt 12:56:50 CET 2025

[2025-10-29 12:56:51] START: Running container for 2020955
[2025-10-29 12:56:51] SUCCESS: Container bc3b12478ed0327749a1c7847cf0247981d35317ff15309d366cd26050564378 started for 2020955
=== Container logs for 2020955 ===
  File "/snippet.py", line 159
    print 'Performance of ranking ', rank_svm.score(X[test], Y[test])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2020955 ===
[2025-10-29 12:56:53] INFO: Container bc3b12478ed0327749a1c7847cf0247981d35317ff15309d366cd26050564378 has stopped
